--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "svgexport": "^0.4.2"
+    "@modelcontextprotocol/sdk": "^1.6.1",
+    "svgexport": "^0.4.2",
+    "zod": "^3.24.2"
   },
   "scripts": {
     "start": "node server/mcp-server.js"
