--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.6.1",
-    "svgexport": "^0.4.2",
-    "zod": "^3.24.2"
-  },
+  "name": "console-to-cursor-mcp",
+  "version": "1.0.0",
+  "description": "MCP for sending console logs to Cursor",
+  "main": "mcp-server.js",
   "scripts": {
-    "start": "node server/mcp-server.js"
+    "start": "node mcp-server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "svgexport": "^0.4.2"
   }
 }
